@@ -92,8 +92,15 @@ Severity   : enhancement
 Bugzilla   : 10768
 Description: 64-bit inode version
 Details:   : Add a on-disk 64-bit inode version for ext3 to track changes made
-	     to the inode. This will be required for version-based recovery.	      
+	     to the inode. This will be required for version-based recovery.
 
+Severity   : normal
+Frequency  : rare
+Bugzilla   : 11818
+Description: MDS fails to start if a duplicate client export is detected
+Details    : in some rare cases it was possible for a client to connect to
+	     an MDS multiple times.  Upon recovery the MDS would detect this
+	     and fail during startup.  Handle this more gracefully.
 
 --------------------------------------------------------------------------------
 
